# lmi-terminal

./: pyproject.toml
lmi_terminal/: __main__.py
