[tool.poetry]
name = "lmi-terminal"
version = "0.1.0"
description = "Terminal interface for LLMs"
authors = [
    "ComputaCo <hello@computaco.ai>",
    "Jacob Valdez <jacob.valdez@computaco.ai>",
]
readme = "README.md"
license = "MIT"
homepage = "https://computaco.ai"
repository = "https://github.com/ComputaCo/lmi-terminal"
keywords = ["lmi", "llm", "terminal", "cli"]
packages = [{ include = "lmi_terminal" }]

[tool.poetry.dependencies]
python = "^3.10"
python-hooks = "^0.2.1"
typer = "^0.9.0"
lmi = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lmi-calculator = 'lmi_terminal.__main__:app'
